# ask_gemini

./: Cargo.toml  README.md
src/: lib.rs  structs.rs
